--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,13 @@ a {
     font-size: 48px;
     float: right;
 }
-body {
-    background-image: url(../images/matrix-code.jpg) ;
+#matrix {
+    background-image: url(../images/matrix-code.jpg);
+}
+h3 {
+    font-size: 48px;
+    text-align: right;
+}
+.box {
+    
 }
