Put images of other works, will make by grid and link clickable.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,7 +57,7 @@ section nav ul li {
   display: inline;
 }
 section nav ul li a{
-  margin: 100px;
+  margin: 80px;
   font-weight: lighter;
   font-size: 36px;
 }
@@ -73,4 +73,38 @@ section nav ul li a{
 .contact-content {
   flex: 0 0 77%;
   font-size: 48px;
+}
+
+.projects {
+  flex: 1;
+  background-color: var(--white);
+  padding: 50px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
+.card {
+  border-style: solid;
+  border-width: 1px;
+  border-radius: var(--border-radius);
+  padding: 10px;
+  flex: 0 0 300px;
+  transform: rotate(8deg);
+  box-shadow: 10px 10px 5px #aaaaaa;
+  margin: 20px;
+}
+
+.card > header {
+  /* This is the same as `border-radius: 50px 50px 0 0 */
+  border-radius: var(--border-radius) var(--border-radius) 0 0;
+  padding: 20px;
+}
+
+.card > p {
+  text-align: center;
+}
+
+.card > img {
+  width: 100%;
 }
