--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,31 @@
 * {
-    padding: 0;
-    margin: 0;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 header {
-    padding: 20px;
-    background-color: teal;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  position: sticky;
+  position: -webkit-sticky;
+  padding: 20px;
+  background-color: teal;
+}
+header a {
+  color:purple;
+}
+header nav {
+  float: right;
+  margin: 30px 0;
+}
+header nav ul li {
+  display: inline;
+}
+header nav ul li a {
+  margin: 30px;
+  font-weight: lighter;
+  font-size: 36px;
 }
 #second {
   background-image: url(../images/matrix-code.jpg);
@@ -22,26 +43,14 @@ h2 {
 }
 h3 {
     font-size: 48px;
-    text-align: right;
+}
+p {
+  background-color: gray;
+  font-size: 24px;
 }
 .box {
   float: right;
   margin-top: 120px;
-}
-header a {
-  color:purple;
-}
-header nav {
-  float: right;
-  margin: 30px 0;
-}
-header nav ul li {
-  display: inline;
-}
-header nav ul li a {
-  margin: 30px;
-  font-weight: lighter;
-  font-size: 36px;
 }
 section {
     display: flex;
@@ -61,6 +70,8 @@ section nav ul li a{
   font-weight: lighter;
   font-size: 36px;
 }
+
+
 .section-title {
   flex: 0 0 20%;
   text-align: center;
@@ -75,6 +86,7 @@ section nav ul li a{
   font-size: 48px;
 }
 
+
 .projects {
   flex: 1;
   background-color: var(--white);
@@ -84,27 +96,39 @@ section nav ul li a{
   justify-content: space-evenly;
 }
 
-.card {
+.horiSEOn {
   border-style: solid;
   border-width: 1px;
   border-radius: var(--border-radius);
   padding: 10px;
   flex: 0 0 300px;
-  transform: rotate(8deg);
   box-shadow: 10px 10px 5px #aaaaaa;
   margin: 20px;
 }
-
-.card > header {
-  /* This is the same as `border-radius: 50px 50px 0 0 */
-  border-radius: var(--border-radius) var(--border-radius) 0 0;
-  padding: 20px;
+.horiSEOn img {
+  flex: 0 0 77%;
+  height: 450px;
+  width: 1000px;
+  
+}
+.projects:hover .horiSEOn {
+  opacity: 0.3;
 }
 
-.card > p {
-  text-align: center;
+.run-buddy {
+  border-style: solid;
+  border-width: 1px;
+  border-radius: var(--border-radius);
+  padding: 10px;
+  flex: 0 0 300px;
+  box-shadow: 10px 10px 5px #aaaaaa;
+  margin: 20px;
 }
-
-.card > img {
-  width: 100%;
+.run-buddy img {
+  flex: 0 0 77%;
+  height: 200px;
+  width: 1000px;
+}
+.projects:hover .run-buddy {
+  opacity: 0.3;
 }
