--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,8 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  color: teal;
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 header {
   display: flex;
@@ -48,9 +50,11 @@ p {
   background-color: gray;
   font-size: 24px;
 }
-.box {
-  float: right;
-  margin-top: 120px;
+article {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: stretch;
 }
 section {
     display: flex;
@@ -131,4 +135,47 @@ section nav ul li a{
 }
 .projects:hover .run-buddy {
   opacity: 0.3;
+}
+
+/* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
+@media screen and (max-width: 980px) {
+  header {
+    padding-bottom: 0;
+    justify-content: center;
+    position: relative;
+  }
+
+  header h1 {
+    width: 100%;
+    text-align: center;
+  }
+  header nav ul {
+    margin-top: 20px;
+    width: 100%;
+    justify-content: center;
+  }
+  header nav ul li a {
+    display: flex;
+    align-items: center;
+  }
+
+  header h2 {
+    width: 100%;
+    text-align: center;
+  }
+  #about-me {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  #works {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  #contact-me {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
 }
